# mpc-limX-control

./: .gitignore  CMakeLists.txt  MPCController.cpp  mpc_control.cpp  package.xml  pf_groupJoints_move.cpp  readme.md  state_estimator.h  u20CMakeLists.txt
include/: MPCController.h  MPCParam.h  QPSolver.h  mpcQP.h  pinocchio_kinematics.h  stateEstimator.h  state_estimator_fake.h
include_copy/: MPCParam.h  state_estimator.h
scripts/: visualize_urdf.py
src/: QPSolver.cpp  Untitled-1.cpp  linear_mpc_example.cpp  mpc_control.cpp  mpc_control_fake_state.cpp  pf_groupJoints_move_test.cpp  pinocchio_dev.cpp  pinocchio_test.cpp  qpSolver_test.cpp  stateEstimator.cpp  state_estimator_fake.cpp  state_estimator_test.cpp
