<?xml version="1.0"?>
<package format="3">
  <name>mpc_limx_control</name>
  <version>0.0.0</version>
  <description>mpc_limx_control</description>
  <maintainer email="sangming1006@126.com">Fleming_HIT</maintainer>
  <license>TODO</license>
  <buildtool_depend    condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend        condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">roscpp</build_export_depend>
  <exec_depend         condition="$ROS_VERSION == 1">roscpp</exec_depend>

  <buildtool_depend    condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <build_depend        condition="$ROS_VERSION == 2">rclcpp</build_depend>
  <build_export_depend condition="$ROS_VERSION == 2">rclcpp</build_export_depend>
  <exec_depend         condition="$ROS_VERSION == 2">rclcpp</exec_depend>

  <build_depend>pointfoot_sdk_lowlevel</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>


  <exec_depend>pointfoot_sdk_lowlevel</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>